[gd_scene load_steps=62 format=2]

[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_viewport.gd" type="Script" id=2]
[ext_resource path="res://ingame_ui.gd" type="Script" id=3]
[ext_resource path="res://pause_menu.gd" type="Script" id=4]
[ext_resource path="res://main-game-window.gd" type="Script" id=5]
[ext_resource path="res://backgrounds/bg_midlane/bg_midlane.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/ingame/game_ui.png" type="Texture" id=7]
[ext_resource path="res://ui/game_ui_theme.tres" type="Theme" id=8]
[ext_resource path="res://ui/ingame/heart.png" type="Texture" id=9]
[ext_resource path="res://ui/ingame/bomb.png" type="Texture" id=10]
[ext_resource path="res://ui/ingame/shadow_gauge_label.png" type="Texture" id=11]
[ext_resource path="res://ui/ingame/shadow_gauge_overlay.gd" type="Script" id=12]
[ext_resource path="res://ui/ingame/shadow_gauge_glow.png" type="Texture" id=13]
[ext_resource path="res://ui/ingame/boss_indicator.png" type="Texture" id=14]
[ext_resource path="res://boss_indicator_container.gd" type="Script" id=15]
[ext_resource path="res://vfx/shaders/shader_ripple.tres" type="Material" id=16]
[ext_resource path="res://vfx/shaders/shader_bloom.tres" type="Material" id=17]
[ext_resource path="res://ui/fonts/main_menu_font.tres" type="DynamicFont" id=18]
[ext_resource path="res://ui/ingame/pause_label.png" type="Texture" id=19]
[ext_resource path="res://vfx_server.gd" type="Script" id=20]
[ext_resource path="res://sound/ui_back.wav" type="AudioStream" id=21]
[ext_resource path="res://sound/ui_accept.wav" type="AudioStream" id=22]
[ext_resource path="res://sound/player_shot_regular.wav" type="AudioStream" id=23]
[ext_resource path="res://sound/sfx_server.gd" type="Script" id=24]
[ext_resource path="res://sound/ui_select.wav" type="AudioStream" id=25]
[ext_resource path="res://bgm/looped/bgm02_start.ogg" type="AudioStream" id=26]
[ext_resource path="res://bgm/looped/bgm02_loop.ogg" type="AudioStream" id=27]
[ext_resource path="res://sound/player_shot_shadowrealm.wav" type="AudioStream" id=28]
[ext_resource path="res://sound/player_bomb.wav" type="AudioStream" id=29]
[ext_resource path="res://sound/player_jex_shot.wav" type="AudioStream" id=30]
[ext_resource path="res://sound/player_enter_shadowrealm.wav" type="AudioStream" id=31]
[ext_resource path="res://sound/player_exit_shadowrealm.wav" type="AudioStream" id=32]
[ext_resource path="res://sound/player_bullet_hit.wav" type="AudioStream" id=33]
[ext_resource path="res://sound/player_hit.wav" type="AudioStream" id=34]
[ext_resource path="res://sound/player_bullet_hit_shadowrealm.wav" type="AudioStream" id=35]
[ext_resource path="res://sound/enemy_shot_1.wav" type="AudioStream" id=36]
[ext_resource path="res://sound/enemy_shot_2.wav" type="AudioStream" id=37]
[ext_resource path="res://sound/boss_bling.wav" type="AudioStream" id=38]
[ext_resource path="res://sound/boss_spell_gather.wav" type="AudioStream" id=39]
[ext_resource path="res://sound/boss_attack_gather.wav" type="AudioStream" id=40]
[ext_resource path="res://sound/enemy_explode.wav" type="AudioStream" id=41]
[ext_resource path="res://sound/player_shadowgauge_max.wav" type="AudioStream" id=42]
[ext_resource path="res://sound/player_collect.wav" type="AudioStream" id=43]
[ext_resource path="res://sound/player_graze.wav" type="AudioStream" id=44]
[ext_resource path="res://sound/enemy_wind.wav" type="AudioStream" id=45]
[ext_resource path="res://bgm/looped/bgm03_start.ogg" type="AudioStream" id=46]
[ext_resource path="res://bgm/looped/bgm03_loop.ogg" type="AudioStream" id=47]
[ext_resource path="res://bgm_server.gd" type="Script" id=48]
[ext_resource path="res://sound/boss_time_warning.wav" type="AudioStream" id=49]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 600, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200, 50 )

[sub_resource type="Animation" id=3]
resource_name = "shadow"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rendered_background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.77, 0.77, 0.77, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
bg_color = Color( 0.423529, 0.882353, 0.94902, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.423529, 0.882353, 0.94902, 0.313726 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.235294, 0.00784314, 0.231373, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="Animation" id=6]
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.258824 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("gauge_glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gauge_glow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.1 ), Vector2( 1.05, 1.3 ), Vector2( 1, 1.1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("gauge_glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gauge_glow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.1 ), Vector2( 1, 1.1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("gauge_glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gauge_glow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.1 ), Vector2( 1, 1.1 ) ]
}

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform bool effect_on = false;

void fragment() {
	if (effect_on) {
		COLOR = textureLod(TEXTURE, UV, 4.0)
		}
	}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/effect_on = false

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="main-game-window" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 200.092 ],
"_edit_vertical_guides_": [ 980.109 ]
}

[node name="game_ui_background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingame_ui" type="Node2D" parent="game_ui_background"]
position = Vector2( 684, 10 )
script = ExtResource( 3 )

[node name="ui_score_value" type="Label" parent="game_ui_background/ingame_ui"]
margin_top = 151.669
margin_right = 294.0
margin_bottom = 199.669
theme = ExtResource( 8 )
text = "1234567890"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_graze_value" type="Label" parent="game_ui_background/ingame_ui"]
margin_top = 225.0
margin_right = 294.0
margin_bottom = 273.0
theme = ExtResource( 8 )
text = "1234"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_shadow_gauge_value" type="Label" parent="game_ui_background/ingame_ui"]
margin_top = 563.0
margin_right = 294.0
margin_bottom = 611.0
theme = ExtResource( 8 )
text = "567"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_v_mult_value" type="Label" parent="game_ui_background/ingame_ui"]
margin_top = 299.0
margin_right = 294.0
margin_bottom = 347.0
theme = ExtResource( 8 )
text = "1.44"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_s_mult_value" type="Label" parent="game_ui_background/ingame_ui"]
margin_top = 637.0
margin_right = 294.0
margin_bottom = 685.0
theme = ExtResource( 8 )
text = "3.12"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_hp_hearts" type="GridContainer" parent="game_ui_background/ingame_ui"]
margin_left = 294.0
margin_top = 398.0
margin_right = 582.0
margin_bottom = 446.0
rect_scale = Vector2( -1, 1 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_1" type="TextureRect" parent="game_ui_background/ingame_ui/ui_hp_hearts"]
margin_right = 36.0
margin_bottom = 32.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_2" type="TextureRect" parent="game_ui_background/ingame_ui/ui_hp_hearts"]
margin_left = 36.0
margin_right = 72.0
margin_bottom = 32.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_3" type="TextureRect" parent="game_ui_background/ingame_ui/ui_hp_hearts"]
margin_left = 72.0
margin_right = 108.0
margin_bottom = 32.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_4" type="TextureRect" parent="game_ui_background/ingame_ui/ui_hp_hearts"]
margin_left = 108.0
margin_right = 144.0
margin_bottom = 32.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_5" type="TextureRect" parent="game_ui_background/ingame_ui/ui_hp_hearts"]
margin_left = 144.0
margin_right = 180.0
margin_bottom = 32.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_6" type="TextureRect" parent="game_ui_background/ingame_ui/ui_hp_hearts"]
margin_left = 180.0
margin_right = 216.0
margin_bottom = 32.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_7" type="TextureRect" parent="game_ui_background/ingame_ui/ui_hp_hearts"]
margin_left = 216.0
margin_right = 252.0
margin_bottom = 32.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart_8" type="TextureRect" parent="game_ui_background/ingame_ui/ui_hp_hearts"]
margin_left = 252.0
margin_right = 288.0
margin_bottom = 32.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_bombs" type="GridContainer" parent="game_ui_background/ingame_ui"]
margin_left = 294.0
margin_top = 472.0
margin_right = 582.0
margin_bottom = 520.0
rect_scale = Vector2( -1, 1 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bomb_1" type="TextureRect" parent="game_ui_background/ingame_ui/ui_bombs"]
margin_right = 36.0
margin_bottom = 32.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bomb_2" type="TextureRect" parent="game_ui_background/ingame_ui/ui_bombs"]
margin_left = 36.0
margin_right = 72.0
margin_bottom = 32.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bomb_3" type="TextureRect" parent="game_ui_background/ingame_ui/ui_bombs"]
margin_left = 72.0
margin_right = 108.0
margin_bottom = 32.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bomb_4" type="TextureRect" parent="game_ui_background/ingame_ui/ui_bombs"]
margin_left = 108.0
margin_right = 144.0
margin_bottom = 32.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bomb_5" type="TextureRect" parent="game_ui_background/ingame_ui/ui_bombs"]
margin_left = 144.0
margin_right = 180.0
margin_bottom = 32.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bomb_6" type="TextureRect" parent="game_ui_background/ingame_ui/ui_bombs"]
margin_left = 180.0
margin_right = 216.0
margin_bottom = 32.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bomb_7" type="TextureRect" parent="game_ui_background/ingame_ui/ui_bombs"]
margin_left = 216.0
margin_right = 252.0
margin_bottom = 32.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bomb_8" type="TextureRect" parent="game_ui_background/ingame_ui/ui_bombs"]
margin_left = 252.0
margin_right = 288.0
margin_bottom = 32.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_viewport_container" type="ViewportContainer" parent="."]
material = ExtResource( 17 )
margin_left = 40.0
margin_top = 24.0
margin_right = 640.0
margin_bottom = 728.947
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3d_background_viewport" type="Viewport" parent="game_viewport_container"]
size = Vector2( 600, 720 )
handle_input_locally = false
hdr = false
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true
shadow_atlas_size = 1

[node name="bg_midlane" parent="game_viewport_container/3d_background_viewport" instance=ExtResource( 6 )]

[node name="game_viewport" type="Viewport" parent="game_viewport_container"]
size = Vector2( 600, 720 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3
script = ExtResource( 2 )

[node name="rendered_background" type="Sprite" parent="game_viewport_container/game_viewport"]
material = ExtResource( 16 )
z_index = -5
centered = false

[node name="player_inst" parent="game_viewport_container/game_viewport" instance=ExtResource( 1 )]
position = Vector2( 310, 610 )
invu_frames = 180
is_invunerable = false

[node name="intro_spawn_timer" type="Timer" parent="game_viewport_container/game_viewport"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="creep_pattern_1_spawn" type="Timer" parent="game_viewport_container/game_viewport"]
wait_time = 2.0
one_shot = true

[node name="windranger_spawn_timer" type="Timer" parent="game_viewport_container/game_viewport"]
wait_time = 2.0
one_shot = true

[node name="autocollect_area" type="Area2D" parent="game_viewport_container/game_viewport"]
visible = false
collision_layer = 0
collision_mask = 4

[node name="autocollect_shape" type="CollisionShape2D" parent="game_viewport_container/game_viewport/autocollect_area"]
shape = SubResource( 1 )

[node name="gauge_hide_area" type="Area2D" parent="game_viewport_container/game_viewport"]
monitorable = false
collision_layer = 0
collision_mask = 64

[node name="hide_shape" type="CollisionShape2D" parent="game_viewport_container/game_viewport/gauge_hide_area"]
position = Vector2( 0, 670 )
shape = SubResource( 2 )

[node name="background_animations" type="AnimationPlayer" parent="game_viewport_container/game_viewport"]
anims/shadow = SubResource( 3 )

[node name="vfx_server" type="Node2D" parent="game_viewport_container/game_viewport" groups=[
"VfxServers",
]]
script = ExtResource( 20 )

[node name="sfx_server" type="Node2D" parent="game_viewport_container/game_viewport"]
script = ExtResource( 24 )

[node name="player_shot_regular" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 23 )
volume_db = -16.0
bus = "Sfx"

[node name="player_shot_shadowrealm" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 28 )
bus = "Sfx"

[node name="player_bomb" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 29 )
bus = "Sfx"

[node name="player_jex_shot" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 30 )
bus = "Sfx"

[node name="player_enter_shadowrealm" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 31 )
bus = "Sfx"

[node name="player_exit_shadowrealm" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 32 )
bus = "Sfx"

[node name="player_bullet_hit" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 33 )
bus = "Sfx"

[node name="player_bullet_hit_shadowrealm" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 35 )
bus = "Sfx"

[node name="player_get_hit" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 34 )
bus = "Sfx"

[node name="enemy_shot_1" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 36 )
volume_db = -6.0
bus = "ShotSfx"

[node name="enemy_shot_2" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 37 )
volume_db = -6.0
bus = "ShotSfx"

[node name="enemy_shot_quiet" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 36 )
volume_db = -10.0
bus = "ShotSfx"

[node name="player_graze" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 44 )
bus = "Sfx"

[node name="player_collect" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 43 )
bus = "Sfx"

[node name="player_shadowgauge_max" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 42 )
bus = "Sfx"

[node name="enemy_explode" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 41 )
bus = "Sfx"

[node name="boss_attack_gather" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 40 )
bus = "Sfx"

[node name="boss_spell_gather" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 39 )
bus = "Sfx"

[node name="boss_bling" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 38 )
bus = "Sfx"

[node name="boss_warning" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 49 )
volume_db = -6.0
bus = "Sfx"

[node name="enemy_wind" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/sfx_server"]
stream = ExtResource( 45 )
volume_db = -10.0
bus = "Sfx"

[node name="bgm_server" type="Node2D" parent="game_viewport_container/game_viewport"]
script = ExtResource( 48 )

[node name="volume_tween" type="Tween" parent="game_viewport_container/game_viewport/bgm_server"]

[node name="bgm02_start" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/bgm_server"]
stream = ExtResource( 26 )
bus = "Music"

[node name="bgm02_loop" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/bgm_server"]
stream = ExtResource( 27 )
bus = "Music"

[node name="bgm03_start" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/bgm_server"]
stream = ExtResource( 46 )
bus = "Music"

[node name="bgm03_loop" type="AudioStreamPlayer" parent="game_viewport_container/game_viewport/bgm_server"]
stream = ExtResource( 47 )
bus = "Music"

[node name="shadow_gauge_overlay" type="Sprite" parent="."]
position = Vector2( 121.632, 716.898 )
texture = ExtResource( 11 )
script = ExtResource( 12 )

[node name="gauge_glow" type="Sprite" parent="shadow_gauge_overlay"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 13.4305 )
scale = Vector2( 1, 1.1 )
texture = ExtResource( 13 )

[node name="gauge_bar" type="ProgressBar" parent="shadow_gauge_overlay"]
anchor_left = 0.00258469
anchor_right = 0.00258469
margin_left = -65.8654
margin_top = 11.0
margin_right = 64.1346
margin_bottom = 15.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gauge_hider" type="AnimationPlayer" parent="shadow_gauge_overlay"]
anims/hide = SubResource( 6 )

[node name="gauge_glow_ani" type="AnimationPlayer" parent="shadow_gauge_overlay"]
anims/explode = SubResource( 7 )
anims/hide = SubResource( 8 )
anims/pulse = SubResource( 9 )

[node name="boss_indicator_container" type="Node2D" parent="."]
position = Vector2( 40, 755 )
script = ExtResource( 15 )

[node name="boss_indicator" type="Sprite" parent="boss_indicator_container"]
visible = false
texture = ExtResource( 14 )

[node name="pause_menu" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_left = 312.0
margin_top = 205.642
margin_right = 712.0
margin_bottom = 505.642
color = Color( 0, 0, 0, 0.705882 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_blur_background" type="Sprite" parent="pause_menu"]
show_behind_parent = true
material = SubResource( 11 )
position = Vector2( -312, -206 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 768 )

[node name="Sprite" type="Sprite" parent="pause_menu"]
position = Vector2( 29.0526, 21.8947 )
texture = ExtResource( 19 )
centered = false

[node name="pause_animations" type="AnimationPlayer" parent="pause_menu"]

[node name="options" type="GridContainer" parent="pause_menu"]
margin_left = 0.458862
margin_top = 79.0
margin_right = 400.459
margin_bottom = 255.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Label" parent="pause_menu/options"]
pause_mode = 2
margin_right = 400.0
margin_bottom = 56.0
rect_min_size = Vector2( 400, 0 )
focus_neighbour_top = NodePath("../exit")
focus_neighbour_bottom = NodePath("../restart")
custom_fonts/font = ExtResource( 18 )
text = "CONTINUE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Label" parent="pause_menu/options"]
pause_mode = 2
margin_top = 60.0
margin_right = 400.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../continue")
focus_neighbour_bottom = NodePath("../exit")
custom_fonts/font = ExtResource( 18 )
text = "RESTART"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Label" parent="pause_menu/options"]
pause_mode = 2
margin_top = 120.0
margin_right = 400.0
margin_bottom = 176.0
focus_neighbour_top = NodePath("../restart")
focus_neighbour_bottom = NodePath("../continue")
custom_fonts/font = ExtResource( 18 )
text = "EXIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_ui_select" type="AudioStreamPlayer" parent="pause_menu"]
stream = ExtResource( 25 )
bus = "UI"

[node name="sfx_ui_accept" type="AudioStreamPlayer" parent="pause_menu"]
stream = ExtResource( 22 )
bus = "UI"

[node name="sfx_ui_back" type="AudioStreamPlayer" parent="pause_menu"]
stream = ExtResource( 21 )
bus = "UI"

[node name="init_animation" type="AnimationPlayer" parent="."]
anims/start = SubResource( 12 )

[node name="debug" type="Label" parent="."]
visible = false
margin_left = 69.0
margin_top = 4.0
margin_right = 372.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="boss_entered" from="game_viewport_container/game_viewport" to="boss_indicator_container" method="_on_game_viewport_boss_entered"]
[connection signal="end_stage" from="game_viewport_container/game_viewport" to="." method="_on_game_viewport_end_stage_DEMO"]
[connection signal="game_over" from="game_viewport_container/game_viewport" to="game_viewport_container/3d_background_viewport/bg_midlane" method="_on_game_viewport_game_over"]
[connection signal="player_dead" from="game_viewport_container/game_viewport/player_inst" to="game_viewport_container/game_viewport" method="_on_player_inst_player_dead"]
[connection signal="shadow_entered" from="game_viewport_container/game_viewport/player_inst" to="game_viewport_container/game_viewport" method="_on_player_inst_shadow_entered"]
[connection signal="shadow_exited" from="game_viewport_container/game_viewport/player_inst" to="game_viewport_container/game_viewport" method="_on_player_inst_shadow_exited"]
[connection signal="update_bombs" from="game_viewport_container/game_viewport/player_inst" to="game_ui_background/ingame_ui" method="_on_player_inst_update_bombs"]
[connection signal="update_hearts" from="game_viewport_container/game_viewport/player_inst" to="game_ui_background/ingame_ui" method="_on_player_inst_update_hearts"]
[connection signal="update_shadow" from="game_viewport_container/game_viewport/player_inst" to="shadow_gauge_overlay" method="_on_player_inst_update_shadow"]
[connection signal="timeout" from="game_viewport_container/game_viewport/intro_spawn_timer" to="game_viewport_container/game_viewport" method="_on_intro_spawn_timer_timeout"]
[connection signal="timeout" from="game_viewport_container/game_viewport/creep_pattern_1_spawn" to="game_viewport_container/game_viewport" method="_on_creep_pattern_1_spawn_timeout"]
[connection signal="timeout" from="game_viewport_container/game_viewport/windranger_spawn_timer" to="game_viewport_container/game_viewport" method="_on_windranger_spawn_timer_timeout"]
[connection signal="area_entered" from="game_viewport_container/game_viewport/autocollect_area" to="game_viewport_container/game_viewport" method="_on_autocollect_area_area_entered"]
[connection signal="area_exited" from="game_viewport_container/game_viewport/autocollect_area" to="game_viewport_container/game_viewport" method="_on_autocollect_area_area_exited"]
[connection signal="area_entered" from="game_viewport_container/game_viewport/gauge_hide_area" to="shadow_gauge_overlay" method="_on_gauge_hide_area_area_entered"]
[connection signal="area_exited" from="game_viewport_container/game_viewport/gauge_hide_area" to="shadow_gauge_overlay" method="_on_gauge_hide_area_area_exited"]
[connection signal="finished" from="game_viewport_container/game_viewport/bgm_server/bgm02_start" to="game_viewport_container/game_viewport/bgm_server" method="_on_bgm02_start_finished"]
[connection signal="finished" from="game_viewport_container/game_viewport/bgm_server/bgm03_start" to="game_viewport_container/game_viewport/bgm_server" method="_on_bgm03_start_finished"]
